devops/docker/caronte/proyectos/ppokemon/deploy/kubernetes/namespace-pokemon.yml
apiVersion: v1
kind: Namespace
metadata:
  name: proyectopokemon
  labels:
    name: proyectopokemon
