devops/docker/caronte/proyectos/ppokemon/deploy/kubernetes/deploy-pokemon.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-deployment
  namespace: proyectopokemon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webpokemon
  template:
    metadata:
      labels:
        app: webpokemon
    spec:
      containers:
        - name: webpokemon
          image: carmen24/ppokemon:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
